hphp/test/zend/bad/ext/spl/tests/SplFixedArray_setSize_param_null.php
<?php
$fixed_array = new SplFixedArray(2);
$fixed_array->setSize(null);
var_dump($fixed_array);
?>